--- a/style.css/stylesheet.css
+++ b/style.css/stylesheet.css
@@ -3,7 +3,6 @@ background: #5C94FC;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding-left:5em;
     width: 100%;
     position:fixed;
     z-index: 999;
@@ -51,6 +50,24 @@ background: #5C94FC;
     margin-left: 1em;
 }
 
+.grid-parent {
+    display: grid;
+    /*grid-template-columns: 25% 75%;*/
+    grid-template-columns: 3fr 2fr;
+    gap: 3em;
+    justify-content: center;
+    margin:auto;
+    width: 100%;
+    height: 100%;
+    position: relative;
+} 
+
+.grid-child {
+    min-height: 30vh;
+    background-color: #8da4d0;
+
+}
+
 a {
     text-decoration: none !important;
     color: white;
@@ -63,10 +80,13 @@ body {
     padding: 0;
     background-color: var(--background-color);
     font-size: 16px;
+    width: 100%
 }
 
 .main {
-    margin: 3em;
+    margin-top: 10em;
+    margin-left: 10em;
+    margin-right: 10em;
 }
 
 .press-start-2p-regular {
