--- a/style.css/stylesheet.css
+++ b/style.css/stylesheet.css
@@ -32,10 +32,12 @@ background: #5C94FC;
         }
     
 }
-.title {
-    color:white;
-    margin-left: 1em;
+
+.hero {
+    margin: 8em;
+    margin-bottom:0;
 }
+
 
 .grid-parent-about {
     grid-template-columns: 2fr 3fr;
@@ -44,12 +46,13 @@ background: #5C94FC;
     display: grid;
     margin:auto;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     position: relative;
 } 
 
 .grid-child-about {
     min-height: 30vh;
+    height: 100%;
     background-color: #8da4d0;
     position: relative;
 }
@@ -99,7 +102,10 @@ background: #5C94FC;
         z-index: 2;
         background: pink; 
         display: flex;
-        justify-content: end;      
+        justify-content: end;
+        height:94px;
+        margin-right: -20%;
+        margin-top: 20%;
     }
     .blocks-bottom-left {
         z-index: 2;
