--- a/style.css/stylesheet.css
+++ b/style.css/stylesheet.css
@@ -1,12 +1,12 @@
 .nav{
-background: #5C94FC;
+    background-color:#5C94FC;
     display: flex;
     align-items: center;
     justify-content: space-around;
     width: 100%;
-    position:fixed;
-    z-index: 999;
+    z-index: 900;
     top:0px;
+    position: fixed;
 }
 
 .nav-about{
@@ -34,16 +34,49 @@ background: #5C94FC;
 }
 
 .hero {
-    margin: 8em;
+    max-width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    /* margin-left: 8em; */
     margin-bottom:0;
+    margin-top:0;
+    .left{
+        /* margin-left: 8em; */
+        /* width: 50%; */
+        padding-left: 8%;
+
+
+    }
+   
 }
 
 .sidebyside {
     display: inline-flex;
     justify-content: space-between;
     align-items: center;
-    gap: 30px;
+    gap: 6em;
     margin-top: 32px;
+}
+
+.coins 
+{   display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30em;
+    .left {
+        display: flex;
+        justify-content: flex-end;
+    }
+    .right {
+        display: flex;
+        justify-content: flex-end;
+    }
+}
+ 
+.title {
+    margin-bottom:10px;
 }
 
 .about-container {
@@ -56,72 +89,22 @@ background: #5C94FC;
     transform: translateY(-50%);
 }
 
-.grid-parent {
-    display: grid;
+.hero-parent {
     /*grid-template-columns: 25% 75%;*/
     grid-template-columns: 2fr 2fr;
     gap: 3em;
-    display: grid;
+    display: flex;
     justify-content: center;
-    margin:auto;
+    margin: 8em;
     width: 100%;
     height: 100%;
     position: relative;
 } 
 
-.grid-child {
-    min-height: 30vh;
+.hero-child {
     position: relative;
+    justify-content: center;
 }
-
-.grid-child-right {
-    min-height: 30vh;
-    background-color: #8da4d0;
-    position: relative;
-    margin-top:-10%;
-    .clouds {
-        z-index: 0;
-        background: magenta;
-        display: flex;
-        justify-content: center; /* Centers horizontally */
-        margin-bottom: -30%;
-    }
-    .pipes { 
-        z-index: 1;
-        background: black; 
-        display: flex;
-        justify-content: center; /* Centers horizontally */
-    }
-    .blocks-top-right {
-        z-index: 2;
-        background: pink; 
-        display: flex;
-        justify-content: end;
-        height:94px;
-        margin-right: -20%;
-        margin-top: 20%;
-    }
-    .blocks-bottom-left {
-        z-index: 2;
-        background: pink; 
-        display: flex;
-        justify-content: start;
-    
-    }
-    .mario {
-        z-index: 3;
-        display: flex;
-        margin-top: -100%;
-        justify-content: center;
-    }
-    .coin {
-        z-index: 4;
-        display: flex;
-        margin-left: 8.5em;
-    }
-}
-
-
 
 a {
     text-decoration: none !important;
@@ -138,7 +121,9 @@ body {
     padding: 0;
     background-color: var(--background-color);
     font-size: 16px;
-    width: 100%
+    width: 100%;
+    overflow-x:hidden;
+
 }
 
 .main {
@@ -153,6 +138,16 @@ body {
     font-style: normal;
   }
   
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+  color:#051F51;
+  text-decoration: underline;
+}
+
 .h1 {
     color: #051F51;
     font-family: "Press Start 2P";
@@ -180,7 +175,6 @@ h2 {
     font-weight: 400;
     line-height: normal;
     margin-top: 0;
-    margin-bottom: 10px;
 }
 
 .h3 {
@@ -206,4 +200,116 @@ h2 {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    transition-duration: 0.4s; /* Smooth transition */
+    border-style: none;
+}
+
+.button:hover {
+    display: inline-flex;
+    padding: 16px 32px;
+    justify-content: center;
+    align-items: center;
+    background-color: #B72D2C;
+    color: white;
+    a {
+        color:white;
+    }
+}
+
+@media only screen and (max-width: 768px) {    
+    .h1 {
+        font-size: 64px;
+    }
+    h1 {
+        font-size: 64px;
+    }
+    .hero {
+        flex-direction: column;
+        margin-top: 6em;
+    }
+    .h2 {
+        font-size: 26px;
+    }
+    h2 {
+        font-size: 26px;
+    }
+    .sidebyside {
+        flex-direction: column;
+        margin: auto;
+    }
+    .ad {
+        width:100vh;
+    }
+    .container {
+        padding-top: 2em;
+        padding-bottom: 2em;
+
+    }
+    .container-plumbing-ad {
+        padding: 2em;
+    }
+}
+
+.mario {
+    width: 92vh;
+}
+
+.container {
+    background-color: white;   
+    max-width: 100%;
+    padding-top:3.5em;
+    padding-bottom:3.5em;
+    padding-left:6em;
+    padding-right: 6em;
+    display: flex;
+    flex-direction: column;
+}
+
+.container-plumbing-ad {
+    background-color: white;   
+    max-width: 100%;
+    padding-top:3.5em;
+    padding-left: 6em;
+    padding-right: 6em;
+    padding-bottom:0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container-title {
+    background-color: white;   
+    max-width: 100%;
+    padding-left: 6em;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.container-catchphrases {
+    background-color: white;   
+    max-width: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.container-red {
+    background-color: #BC061F;
+    max-width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+}
+.container-blue {
+    background-color: #5C94FC;
+    max-width: 100%;
+    padding-left: 6em;
+    padding-right: 6em;
+    display: flex;
+    flex-direction: column;
+}
+
+.indent {
+    padding-left: auto;
 }
