--- a/style.css/plumbing.css
+++ b/style.css/plumbing.css
@@ -93,10 +93,15 @@ h4 {
         row-gap:0.5rem;
     }
     .container-plumbing {
-        padding:0;
+        padding:2em;
     }
-    .reviews {
-        flex-direction: column;
+    .schedule-service {
+    font-size: 1rem;
+    }   
+    .button-schedule {
+        font-size: 1rem;
+    }
+
 }
     @media only screen and (max-width: 1050px) {
     .cardholder {
@@ -111,9 +116,65 @@ h4 {
     }
 }
 
-.reviews {
-    gap: 3em;
+.schedule-service {
+    background-color: #000000;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    max-height: 4em;
+    padding-left: 3em;
+    padding-right: 3em;
+    height: auto;
+    color: #FFF;
+    font-family: "ADLaM Display";
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    
+}
+
+.footer {
+    background-color: #008088;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 3em;
+    margin-bottom: 0;
+    height: auto;
+    color: #000;
+    font-family: "ADLaM Display";
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.button-schedule {
+    display: inline-flex;
+    padding: 0.625rem 1.25rem;
     justify-content: center;
     align-items: center;
-    display: flex;
+    max-height: fit-content;
+    background-color: #FB6C00;
+    color: #000000;
+    font-family: "ADLaM Display";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    transition-duration: 0.4s; /* Smooth transition */
+    border-style: none;
+}
+
+.button-schedule:hover {
+    display: inline-flex;
+    padding: 16px 32px;
+    justify-content: center;
+    align-items: center;
+    background-color: #AC4A00;
+    color: white;
+    a {
+        color:white;
+    }
 }
