--- a/style.css/plumbing.css
+++ b/style.css/plumbing.css
@@ -137,6 +137,7 @@ h4 {
     font-family: "ADLaM Display";
     font-size: 2rem;
     font-style: normal;
+    gap: 2em;
     font-weight: 400;
     line-height: normal;
     padding:0.5rem;
