--- a/style.css/plumbing.css
+++ b/style.css/plumbing.css
@@ -98,6 +98,8 @@ h4 {
     }
     .schedule-service {
     font-size: 1rem;
+    padding: 0em;
+    margin:0;
     }   
     .button-schedule {
         font-size: 1rem;
@@ -109,7 +111,10 @@ h4 {
     .footer {
         padding-left:0;
         padding-left:0;
-
+    }
+    .left1 {
+        margin-left: 0;
+        padding: 0;
     }
 
 }
@@ -124,7 +129,13 @@ h4 {
     .text {
         max-width: 60%;
     }
-}
+    p {
+        font-size: 20px;
+    }
+    .button-schedule {
+        font-size: 16px;
+    }
+    }
 
 .schedule-service {
     background-color: #000000;
@@ -142,7 +153,7 @@ h4 {
     font-weight: 400;
     line-height: normal;
     
-    .left {
+    .left1 {
         display: flex;
         margin-left: 4em;
         justify-content: left;
